@@ -1,4 +1,4 @@
-# $Id: run01.mac,v 1.4 2001-10-22 10:58:42 maire Exp $
+# $Id: run01.mac,v 1.5 2001-11-05 15:28:39 maire Exp $
 #
 # Macro file for "exampleN03.cc" 
 # (can be run in batch, without graphic)
@@ -11,7 +11,6 @@
 /run/initialize
 #
 /run/verbose 2
-/event/drawTracks none
 /event/printModulo 50
 #
 /gun/particle e-
