@@ -1,4 +1,4 @@
-# $Id: run02.mac,v 1.3 2001-10-22 10:58:42 maire Exp $
+# $Id: run02.mac,v 1.4 2001-11-05 15:28:39 maire Exp $
 #
 # Macro file for "TestEm3.cc" 
 # (can be run in batch, without graphic)
@@ -7,18 +7,18 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 100 mum
+/run/initialize
+#
 /calor/setNbOfLayers 50
 /calor/setNbOfAbsor 2
 /calor/setAbsor 0 Tungsten 2 mm
 /calor/setAbsor 1 Silicium 0.3 mm
 /calor/update
 #
-/run/particle/setCut 100 mum
-/run/initialize
 /gun/setDefault
 #
 /run/verbose 2
-/event/drawTracks none
 /event/printModulo 100
 #
 /gun/particle e-
