@@ -1,4 +1,4 @@
-# $Id: run06.mac,v 1.3 2001-10-22 10:58:43 maire Exp $
+# $Id: run06.mac,v 1.4 2001-11-05 15:28:39 maire Exp $
 #
 # Macro file for "TestEm3.cc" 
 # (can be run in batch, without graphic)
@@ -9,6 +9,9 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 1 mm
+/run/initialize
+#
 /calor/setNbOfLayers 10
 /calor/setNbOfAbsor 4
 /calor/setAbsor 0 Iron    35.7 mm
@@ -18,8 +21,6 @@
 /calor/setSizeYZ 16. cm
 /calor/update
 #
-/run/particle/setCut 1 mm
-/run/initialize
 /gun/setDefault
 #
 /run/verbose 2
