@@ -1,4 +1,4 @@
-# $Id: run07.mac,v 1.3 2001-10-22 10:58:43 maire Exp $
+# $Id: run07.mac,v 1.4 2001-11-05 15:28:39 maire Exp $
 #
 # Macro file for "TestEm3.cc" 
 # (can be run in batch, without graphic)
@@ -6,6 +6,9 @@
 # LiquidArgon-Lead 2 layers; proton 500 MeV
 #
 /control/verbose 2
+#
+/run/particle/setCut 1.5 mm
+/run/initialize
 #
 /calor/setNbOfLayers 2
 /calor/setNbOfAbsor 2
@@ -15,12 +18,10 @@
 /calor/update
 #
 /process/inactivate msc
-/run/particle/setCut 1.5 mm
-/run/initialize
+#
 /gun/setDefault
 #
 /run/verbose 2
-/event/drawTracks charged
 /event/printModulo 100
 #
 /gun/particle proton
