@@ -1,4 +1,4 @@
-# $Id: run12.draw,v 1.2 2001-10-22 10:58:43 maire Exp $
+# $Id: run12.draw,v 1.3 2001-11-05 15:28:39 maire Exp $
 #
 # Macro file for "TestEm3.cc" 
 # (can be run in batch, without graphic)
@@ -8,6 +8,9 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 1 mm
+/run/initialize
+#
 /calor/setNbOfLayers 1
 /calor/setNbOfAbsor 2
 /calor/setAbsor 0 Iron 1 cm
@@ -15,8 +18,6 @@
 /calor/setSizeYZ 2 cm
 /calor/update
 #
-/run/particle/setCut 1 mm
-/run/initialize
 /gun/setDefault
 #
 /run/verbose 2
