@@ -1,4 +1,4 @@
-# $Id: run15.mac,v 1.3 2001-10-22 10:58:44 maire Exp $
+# $Id: run15.mac,v 1.4 2001-11-05 15:28:39 maire Exp $
 #
 # Macro file for "TestEm3.cc" 
 # (can be run in batch, without graphic)
@@ -7,6 +7,9 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 10 mum
+/run/initialize
+#
 /calor/setNbOfLayers 20
 /calor/setNbOfAbsor 2
 /calor/setAbsor 0 Iron 14 mm
@@ -14,13 +17,10 @@
 /calor/setSizeYZ 30 cm
 /calor/update
 #
-/run/particle/setCut 10 mum
-/run/initialize
 /gun/setDefault
 #
 /run/verbose 2
 /event/printModulo 1000
-/event/drawTracks charged
 #
 /gun/particle mu+
 /gun/energy 20 GeV
