@@ -1,4 +1,4 @@
-# $Id: run16.mac,v 1.3 2001-10-22 10:58:44 maire Exp $
+# $Id: run16.mac,v 1.4 2001-11-05 15:28:40 maire Exp $
 #
 # Macro file for "TestEm3.cc" 
 # (can be run in batch, without graphic)
@@ -9,6 +9,9 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 1 mum
+/run/initialize
+#
 /calor/setNbOfLayers 1
 /calor/setNbOfAbsor 3
 /calor/setAbsor 0 Aluminium 170 mum
@@ -17,13 +20,10 @@
 /calor/setSizeYZ 1050 mum
 /calor/update
 #
-/run/particle/setCut 1 mum
-/run/initialize
 /gun/setDefault
 #
 /run/verbose 2
 /event/printModulo 1000
-/event/drawTracks  all
 #
 /gun/particle e-
 /gun/energy 1 MeV
